[gd_scene load_steps=4 format=3 uid="uid://bqlo10u373x4s"]

[ext_resource type="PackedScene" uid="uid://c1o0h8pg2oy8i" path="res://ui/menu_base.tscn" id="1_hdmo1"]
[ext_resource type="Script" uid="uid://g0kho2jxjumh" path="res://ui/pause_menu.gd" id="2_05uyy"]
[ext_resource type="Theme" uid="uid://bq1lvrvb3ecum" path="res://ui/menu_button_theme.tres" id="2_nwcfo"]

[node name="MenuBase" instance=ExtResource("1_hdmo1")]
script = ExtResource("2_05uyy")

[node name="resume_btn" type="Button" parent="global_margins/vbox_layout/hbox_layout/buttons_margins/buttons" index="0"]
layout_mode = 2
theme = ExtResource("2_nwcfo")
text = "resume"
alignment = 0

[node name="spacer" type="MarginContainer" parent="global_margins/vbox_layout/hbox_layout/buttons_margins/buttons" index="1"]
layout_mode = 2
theme_override_constants/margin_top = 13

[node name="controls_btn" type="Button" parent="global_margins/vbox_layout/hbox_layout/buttons_margins/buttons" index="2"]
layout_mode = 2
theme = ExtResource("2_nwcfo")
text = "CONTROLS"
alignment = 0

[node name="spacer2" type="MarginContainer" parent="global_margins/vbox_layout/hbox_layout/buttons_margins/buttons" index="3"]
layout_mode = 2
theme_override_constants/margin_top = 13

[node name="exit_btn" type="Button" parent="global_margins/vbox_layout/hbox_layout/buttons_margins/buttons" index="4"]
layout_mode = 2
theme = ExtResource("2_nwcfo")
text = "exit"
alignment = 0

[connection signal="pressed" from="global_margins/vbox_layout/hbox_layout/buttons_margins/buttons/resume_btn" to="." method="_on_resume_btn_pressed"]
[connection signal="focus_entered" from="global_margins/vbox_layout/hbox_layout/buttons_margins/buttons/controls_btn" to="." method="_on_controls_btn_focus_entered"]
[connection signal="focus_exited" from="global_margins/vbox_layout/hbox_layout/buttons_margins/buttons/controls_btn" to="." method="_on_controls_btn_focus_exited"]
[connection signal="pressed" from="global_margins/vbox_layout/hbox_layout/buttons_margins/buttons/exit_btn" to="." method="_on_exit_btn_pressed"]
